[tool.poetry]
name = "google_timeline_parse"
version = "0.1.0"
description = ""
authors = ["Jeremy Chan <jeremych@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
reverse_geocoder = "^1.5.1"
click = "^7.1.2"
geopy = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
